Added Get Inventory method